# Alabaster

./: .gitignore
backend/go/src/: go.mod  go.sum  main.go  send_email.go
backend/go/src/static/: index.html
backend/python/src/: Dockerfile  main.py  pyproject.toml
backend/python/src/llm/: gemini.py  langraph_model.py  tools.py
backend/src/: main.py  model.py  pyproject.toml
backend/src/llm/: gemini.py  langraph_model.py
frontend/: .env.example  README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/com/example/alabaster/: MainActivity.kt
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: config.dart  main.dart
frontend/lib/Clock/: clock.dart  config.dart
frontend/lib/modules/: bottomleft.dart  fourthWidget.dart  middleleft.dart  topleft.dart
frontend/lib/modules/date/: date.dart
frontend/lib/modules/weather/: weatherWidget.dart  weatherapi.dart  weatherforecast.dart
frontend/lib/pages/: homepage.dart
frontend/linux/: CMakeLists.txt
frontend/linux/runner/: my_application.cc
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  main.cpp
