[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langgraph>=0.6.4",
    "numpy>=2.3.3",
    "pyaudio>=0.2.14",
    "pydantic>=2.11.7",
    "sounddevice>=0.5.2",
    "speechrecognition>=3.14.3",
    "uvicorn>=0.35.0",
]
